--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "readmeFilename": "README.md",
   "nbbpm": {
     "compatibility": "^1.0.0"
+  },
+  "dependencies": {
+    "async": "^2.6.1"
   }
 }
