--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "readmeFilename": "README.md",
   "nbbpm": {
-    "compatibility": "^1.0.0"
+    "compatibility": "^2.x"
   },
   "dependencies": {
     "async": "^3.2.0",
